Trabajando con la parte de dietas
Probando estilos y colores.
Dando forma a la parte de dietas con las funciones basicas como agregar, ver el listado y ver una dieta en detalle.

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -73,11 +73,9 @@
             </div>
         </nav>
     </header>
-    <div class="container">
-        <main role="main" class="p-3">
-            @RenderBody()
-        </main>
-    </div>
+    <main role="main" class="container p-3">
+        @RenderBody()
+    </main>
 
     <footer class="footer mt-5 py-4 text-light">
         <div class="container text-center text-md-start">
