--- a/Views/Dieta/Read.cshtml
+++ b/Views/Dieta/Read.cshtml
@@ -2,8 +2,8 @@
 
 <div class="row container py-5 text-white justify-content-center">
     <div class="col-md-8">
-        <table class="table table-dark table-hover border">
-            <thead class="table-secondary" ">
+        <table class="shadow-border">
+            <thead class="">
                 <tr>
                     <th>
                         @Html.DisplayNameFor(model => model.Nombre)
@@ -14,17 +14,18 @@
             </thead>
             <tbody>
             @foreach (var item in Model) {
-                <tr class="">
+                <tr>
                     <td>
                         @Html.DisplayFor(modelItem => item.Nombre)
                     </td>
                     <td> 
                         @Html.DisplayFor(modelItem => item.CaloriasDiarias)
+                        Kcal
                     </td>
                     <td>
-                        <a class="btn btn-info" asp-action="Details" asp-route-id="@item.Id"><i class="fa-solid fa-eye"></i></a>
-                        <a class="btn btn-warning" asp-action="Edit" asp-route-id="@item.Id"><i class="fa-solid fa-edit"></i></a>
-                        <a class="btn btn-danger" asp-action="Delete" asp-route-id="@item.Id"><i class="fa-solid fa-trash"></i></a>
+                        <a class="btn btn-detail-gradient" asp-action="Details" asp-route-id="@item.Id"><i class="fa-solid fa-eye"></i></a>
+                        <a class="btn btn-edit-gradient" asp-action="Edit" asp-route-id="@item.Id"><i class="fa-solid fa-edit"></i></a>
+                        <a class="btn btn-delete-gradient" asp-action="Delete" asp-route-id="@item.Id"><i class="fa-solid fa-trash"></i></a>
                     </td>
                 </tr>
             }
