--- a/Views/Dieta/Create.cshtml
+++ b/Views/Dieta/Create.cshtml
@@ -1,32 +1,42 @@
 @model FitnessManager.Models.Dieta;
 
-<div class="container py-5">
-    <div class="row justify-content-md-center text-white">
-        <form asp-action="Create" class="col-md-6">
-            <h2 class="text-info">@ViewData["Title"]</h2>
-            @if (TempData["ErrorMessage"] != null)
-            {
-                <div class="alert alert-danger" role="alert">
-                    @TempData["ErrorMessage"]
+<div class="row container py-5 text-white justify-content-center">
+    <div class="col-md-8">
+        <div class="container">
+            <form asp-action="Create">
+                <div class="card">
+                    <div class="card-header gradientT1">
+                        <h2 class="text-white">@ViewData["Title"]</h2>
+                    </div>
+                    <div class="card-body bg-dark text-white">
+                        @if (TempData["ErrorMessage"] != null)
+                        {
+                            <div class="alert alert-danger" role="alert">
+                                @TempData["ErrorMessage"]
+                            </div>
+                        }
+                        <div class="mb-3">
+                            <label for="Nombre" class="form-label">Nombre:</label>
+                            <input type="text" class="form-control" id="Nombre" name="Nombre" required>
+                            <span asp-validation-for="Descripcion" class="text-danger"></span>
+                        </div>
+                        <div class="mb-3">
+                            <label for="Descripcion" class="form-label">Descripción:</label>
+                            <textarea type="text" class="form-control" id="Descripcion" name="Descripcion" style="resize: none;"rows="6" required></textarea>
+                            <span asp-validation-for="Descripcion" class="text-danger"></span>
+                        </div>
+                        <div class="mb-3">
+                            <label for="CaloriasDiarias " class="form-label">Calorias diarias:</label>
+                            <input type="text" class="form-control" id="CaloriasDiarias" name="CaloriasDiarias" required>
+                            <span asp-validation-for="Descripcion" class="text-danger"></span>
+                        </div>
+                    </div>
+                    <div class="card-footer bg-dark">
+                        <input type="submit" value="Guardar" class="btn btn-gradient"/>
+                        <a asp-action="Read" class="btn btn-link">Volver</a>
+                    </div>
                 </div>
-            }
-            <div class="mb-3">
-                <label for="Nombre" class="form-label">Nombre:</label>
-                <input type="text" class="form-control" id="Nombre" name="Nombre" required>
-                <span asp-validation-for="Descripcion" class="text-danger"></span>
-            </div>
-            <div class="mb-3">
-                <label for="Descripcion" class="form-label">Descripción:</label>
-                <textarea type="text" class="form-control" id="Descripcion" name="Descripcion" style="resize: none;"rows="6" required></textarea>
-                <span asp-validation-for="Descripcion" class="text-danger"></span>
-            </div>
-            <div class="mb-3">
-                <label for="CaloriasDiarias " class="form-label">Calorias diarias:</label>
-                <input type="text" class="form-control" id="CaloriasDiarias" name="CaloriasDiarias" required>
-                <span asp-validation-for="Descripcion" class="text-danger"></span>
-            </div>
-            <input type="submit" value="Crear dieta" class="btn btn-gradient"/>
-            <a type="submit" value="Crear dieta" class="btn btn-link">Volver</a>
-        </form>
+            </form>
+        </div>
     </div>
 </div>
