--- a/Views/Dieta/DeleteConfirmation.cshtml
+++ b/Views/Dieta/DeleteConfirmation.cshtml
@@ -5,7 +5,7 @@
         <div class="container">
             <div class="card">
                 <div class="card-header gradientT1">
-                    <h2 class="text-light">Dieta: @Model.Nombre</h2>
+                    <h2 class="text-light">¿Estas seguro que deseas eliminar esta dieta?</h2>
                 </div>
                 <div class="card-body bg-dark">
                     @{
@@ -19,15 +19,14 @@
                             </div>
                         }
                     }
-                    <h5 class="text-white"><b>Nombre:</b> @Model.Nombre</h5>
-                    <h5 class="text-white"><b>Fecha de creación:</b> @Model.FechaCreacion</h5>
-                    <h5 class="text-white"><b>Calorias diarias:</b> @Model.CaloriasDiarias Kcal</h5>
-                    <h5 class="text-white"><b>Descripción:</b></h5>
-                    <p class="text-white">@Model.Descripcion</p>
+                    <p class="text-white">Nombre: @Model.Nombre Kcal</p>
+                    <p class="text-white">Calorias diarias: @Model.CaloriasDiarias Kcal</p>
+                    <p class="text-white">Descripción: @Model.Descripcion</p>
                 </div>
                 <div class="card-footer bg-dark">
-                    <a class="btn btn-edit-gradient" asp-action="Edit" asp-route-id="@Model.Id"><i class="fa-solid fa-edit me-1"></i>Editar</a>
-                    <a class="btn btn-delete-gradient" asp-action="DeleteConfirmation" asp-route-id="@Model.Id"><i class="fa-solid fa-trash me-1"></i>Eliminar</a>
+                    <form asp-action="Delete" asp-route-id="@Model.Id" method="post" class="d-inline">
+                        <button type="submit" class="btn btn-delete-gradient" ><i class="fa-solid fa-trash me-1"></i>Eliminar</button>
+                    </form>
                     <a class="btn btn-detail-gradient" asp-action="Read"><i class="fa-solid fa-arrow-left me-1"></i>Volver</a>
                 </div>
             </div>
