--- a/Views/Dieta/Read.cshtml
+++ b/Views/Dieta/Read.cshtml
@@ -2,6 +2,19 @@
 
 <div class="row container py-5 text-white justify-content-center">
     <div class="col-md-8">
+        <a class="btn btn-detail-gradient mb-3" asp-action="Index"><i class="fa-solid fa-arrow-left me-1"></i>Volver</a>
+        <a class="btn btn-edit-gradient mb-3" asp-action="Create"><i class="fa-solid fa-plus me-1"></i>Nueva dieta</a>
+        @{
+            if (TempData["ErrorMessage"] != null) {
+                <div class="alert alert-danger" role="alert">
+                    <p>@TempData["ErrorMessage"]</p>
+                </div>
+            }else if (TempData["SuccessMessage"] != null) {
+                <div class="alert alert-success" role="alert">
+                    <p>@TempData["SuccessMessage"]</p>
+                </div>
+            }
+        }
         <table class="shadow-border">
             <thead class="">
                 <tr>
@@ -25,7 +38,7 @@
                     <td>
                         <a class="btn btn-detail-gradient" asp-action="Details" asp-route-id="@item.Id"><i class="fa-solid fa-eye"></i></a>
                         <a class="btn btn-edit-gradient" asp-action="Edit" asp-route-id="@item.Id"><i class="fa-solid fa-edit"></i></a>
-                        <a class="btn btn-delete-gradient" asp-action="Delete" asp-route-id="@item.Id"><i class="fa-solid fa-trash"></i></a>
+                        <a class="btn btn-delete-gradient" asp-action="DeleteConfirmation" asp-route-id="@item.Id"><i class="fa-solid fa-trash"></i></a>
                     </td>
                 </tr>
             }
