--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -13,7 +13,7 @@
     </div>
 
     <div class="col-6 col-md-4">
-      <a asp-action="Ejercicios" class="btn btn-gradient d-flex flex-column align-items-center justify-content-center shadow-lg hover-scale square-btn">
+      <a asp-controller="Exercise" asp-action="Index" class="btn btn-gradient d-flex flex-column align-items-center justify-content-center shadow-lg hover-scale square-btn">
         <i class="fa-solid fa-dumbbell mb-2" style="font-size: 2rem;"></i>
         <span class="fw-bold">Ejercicios</span>
       </a>
