--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -59,7 +59,7 @@
                                 }
                                 <li><hr class="dropdown-divider"></li>
                                 <form asp-area="" asp-controller="Account" asp-action="Logout" method="post">
-                                    <button class="nav-link text-dark" type="submit">Logout</button>
+                                    <button class="nav-link text-dark" type="submit"><i class="bi bi-box-arrow-left"></i> Logout</button>
                                 </form>
                             </ul>
                             </li>
