--- a/Views/Account/ChangePasswordPartial.cshtml
+++ b/Views/Account/ChangePasswordPartial.cshtml
@@ -2,6 +2,8 @@
 <div class="container mt-5" style="max-width: 600px;">
     <h2 class="mb-4">Cambiar Contraseña</h2>
     <form asp-action="ChangePassword" method="post">
+        <partial name="_Alert" />
+        <div asp-validation-summary="All" class="text-danger"></div>
         <div class="mb-3">
             <label asp-for="CurrentPassword" class="form-label">Contraseña Actual</label>
             <input asp-for="CurrentPassword" class="form-control" type="password" />
@@ -9,6 +11,19 @@
         </div>
         <div class="mb-3">
             <label asp-for="NewPassword" class="form-label">Nueva Contraseña</label>
+            <i class="bi bi-info-circle-fill text-muted" data-bs-toggle="tooltip-password" data-bs-placement="top"
+                    data-bs-custom-class="custom-tooltip"
+                    data-bs-html="true"
+                    title="
+                    <ul class='text-start mb-0'>
+                        <li>Tener al menos 8 caracteres</li>
+                        <li>Tener minúsculas</li>
+                        <li>Tener mayúsculas</li>
+                        <li>Tener caracteres especiales</li>
+                        <li>No necesita números</li>
+                        <li>Tener al menos un carácter único</li>
+                    </ul>
+                    "></i>
             <input asp-for="NewPassword" class="form-control" type="password" />
             <span asp-validation-for="NewPassword" class="text-danger"></span>
         </div>
@@ -20,3 +35,10 @@
         <button type="submit" class="btn btn-primary">Actualizar Contraseña</button>
     </form>
 </div>
+
+<script>
+    document.addEventListener("DOMContentLoaded", function () {
+        const tooltipTriggerList = document.querySelectorAll('[data-bs-toggle="tooltip-password"]');
+        tooltipTriggerList.forEach(t => new bootstrap.Tooltip(t));
+    });
+</script>
