--- a/Views/Account/Register.cshtml
+++ b/Views/Account/Register.cshtml
@@ -4,21 +4,23 @@
     <div class="card p-4 shadow-lg" style="width: 350px;">
         <h3 class="text-center mb-4">Crear Cuenta</h3>
         <form asp-action="Register" method="post">
+            <partial name="_Alert" />
+            <div asp-validation-summary="All" class="text-danger"></div>
             <div class="mb-3">
-                <label for="username" class="form-label">Usuario</label>
-                <input type="text" class="form-control" id="username" name="Username" required>
+                <label for="Username" class="form-label">Usuario</label>
+                <input type="text" class="form-control" id="username" asp-for="Username" required>
             </div>
             <div class="mb-3">
                 <label for="Nombre" class="form-label">Nombre</label>
-                <input type="text" class="form-control" id="nombre" name="Nombre" required>
+                <input type="text" class="form-control" id="nombre" asp-for="Nombre" required>
             </div>
             <div class="mb-3">
                 <label for="Apellido" class="form-label">Apellido</label>
-                <input type="text" class="form-control" id="apellido" name="Apellido" required>
+                <input type="text" class="form-control" id="apellido" asp-for="Apellido" required>
             </div>
             <div class="mb-3">
                 <label for="email" class="form-label">Correo electrónico</label>
-                <input type="email" class="form-control" id="email" name="Email" required>
+                <input type="email" class="form-control" id="email" asp-for="Email" required>
             </div>
             <div class="mb-3">
                 <label for="password" class="form-label">Contraseña</label>
@@ -35,11 +37,11 @@
                         <li>Tener al menos un carácter único</li>
                     </ul>
                     "></i>
-                <input type="password" class="form-control" id="password" name="Password" required>
+                <input type="password" class="form-control" id="password" asp-for="Password" required>
             </div>
             <div class="mb-3">
                 <label for="confirmPassword" class="form-label">Confirmar Contraseña</label>
-                <input type="password" class="form-control" id="confirmPassword" name="ConfirmPassword" required>
+                <input type="password" class="form-control" id="confirmPassword" asp-for="ConfirmPassword" required>
             </div>
             <button type="submit" class="btn btn-gradient w-100">Registrarse</button>
         </form>
