--- a/Views/Dieta/Create.cshtml
+++ b/Views/Dieta/Create.cshtml
@@ -1,6 +1,6 @@
 @model FitnessManager.Models.Dieta;
 
-<div class="row container py-5 text-white justify-content-center">
+<div class="row py-5 text-white justify-content-center">
     <div class="col-md-8">
         <div class="container">
             <form asp-action="Create">
