--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -55,7 +55,7 @@
                             </a>
                             <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="perfilDropdown">
                                 <li><a class="dropdown-item" asp-controller="Account" asp-action="Profile"><i class="bi bi-person me-1"></i>Mi perfil</a></li>
-                                <li><a class="dropdown-item" asp-controller="Account" asp-action="Settings"><i class="bi bi-gear me-1"></i>Ajustes</a></li>
+                                <li><a class="dropdown-item" asp-controller="Account" asp-action="Settings" asp-route-view="account-settings"><i class="bi bi-gear me-1"></i>Ajustes</a></li>
                                 @if(User.IsInRole("Admin"))
                                 {
                                     <li><a class="dropdown-item" asp-controller="Admin" asp-action="Index"><i class="bi bi-shield-lock me-1"></i>Panel Admin</a></li>
