Apartado de Pesajes (Parte 1)
Index
Create
Edit
Delete

Service y Repository

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -27,7 +27,7 @@
     </div>
 
     <div class="col-6 col-md-4">
-      <a asp-action="Pesajes" class="btn btn-gradient d-flex flex-column align-items-center justify-content-center shadow-lg hover-scale square-btn">
+      <a asp-controller="Pesaje" asp-action="Index" class="btn btn-gradient d-flex flex-column align-items-center justify-content-center shadow-lg hover-scale square-btn">
         <i class="fa-solid fa-scale-balanced mb-2" style="font-size: 2rem;"></i>
         <span class="fw-bold">Pesajes</span>
       </a>
