--- a/Views/Account/Profile.cshtml
+++ b/Views/Account/Profile.cshtml
@@ -6,7 +6,7 @@
             <img src="https://images.unsplash.com/photo-1605296867304-46d5465a13f1?auto=format&fit=crop&w=900&q=80"
                 class="w-100 rounded-4" style="height: 200px; object-fit: cover;">
             <div class="profile-img position-absolute" style="bottom: -50px; left: 40px;">
-                <img src="https://cdn-icons-png.flaticon.com/512/847/847969.png"
+                <img src="@Model.AvatarUrl"
                     class="rounded-circle border border-3 border-dark" style="width: 100px; height: 100px; object-fit: cover;">
             </div>
         </div>
