--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -6,7 +6,7 @@
   <div class="row g-4">
     <!-- Botón ejemplo -->
     <div class="col-6 col-md-4">
-      <a asp-action="Rutinas" class="btn btn-gradient d-flex flex-column align-items-center justify-content-center shadow-lg hover-scale square-btn">
+      <a asp-controller="Rutina" asp-action="Index" class="btn btn-gradient d-flex flex-column align-items-center justify-content-center shadow-lg hover-scale square-btn">
         <i class="bi bi-list-check mb-2" style="font-size: 2rem;"></i>
         <span class="fw-bold">Rutinas</span>
       </a>
