--- a/Views/Pesaje/Edit.cshtml
+++ b/Views/Pesaje/Edit.cshtml
@@ -4,6 +4,7 @@
     <div class="col-md-8">
         <div class="container">
             <form asp-action="Edit">
+                <input type="hidden" asp-for="Id" />
                 <div class="card">
                     <div class="card-header gradientT1">
                         <h2 class="text-white">Editar</h2>
