--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -34,7 +34,7 @@
     </div>
 
     <div class="col-6 col-md-4">
-      <a href="/Progreso" class="btn btn-gradient d-flex flex-column align-items-center justify-content-center shadow-lg hover-scale square-btn">
+      <a asp-controller="Progreso" asp-action="Index" class="btn btn-gradient d-flex flex-column align-items-center justify-content-center shadow-lg hover-scale square-btn">
         <i class="bi bi-bar-chart-line mb-2" style="font-size: 2rem;"></i>
         <span class="fw-bold">Progreso</span>
       </a>
@@ -55,14 +55,14 @@
     </div>
 
     <div class="col-6 col-md-4">
-      <a href="/Perfil" class="btn btn-gradient d-flex flex-column align-items-center justify-content-center shadow-lg hover-scale square-btn">
+      <a asp-controller="Account" asp-action="Profile" class="btn btn-gradient d-flex flex-column align-items-center justify-content-center shadow-lg hover-scale square-btn">
         <i class="bi bi-person-circle mb-2" style="font-size: 2rem;"></i>
         <span class="fw-bold">Perfil</span>
       </a>
     </div>
 
     <div class="col-6 col-md-4">
-      <a href="/Ajustes" class="btn btn-gradient d-flex flex-column align-items-center justify-content-center shadow-lg hover-scale square-btn">
+      <a asp-controller="Account" asp-action="Settings" class="btn btn-gradient d-flex flex-column align-items-center justify-content-center shadow-lg hover-scale square-btn">
         <i class="bi bi-gear mb-2" style="font-size: 2rem;"></i>
         <span class="fw-bold">Ajustes</span>
       </a>
