--- a/Views/Pesaje/Index.cshtml
+++ b/Views/Pesaje/Index.cshtml
@@ -3,6 +3,7 @@
 <div class="row container py-5 text-white justify-content-center">
     <div class="col-md-8">
         <a class="btn btn-edit-gradient mb-3" asp-action="Create"><i class="fa-solid fa-plus me-1"></i>Nuevo Pesaje</a>
+        <a class="btn btn-back-gradient mb-3" asp-controller="Home" asp-action="Index"><i class="bi bi-arrow-left me-1"></i>Volver al Inicio</a>
         <partial name="_Alert" />
         <table class="shadow-border">
             <thead class="">
